@@ -7,6 +7,7 @@ prefix=@prefix@
 exec_prefix=@exec_prefix@
 libexecdir=@libexecdir@
 SED=@SED@
+EXTRA_LIBS="@EXTRA_LIBS@"
 
 GARLIC=${prefix}/lib/garlic
 GREP=grep
@@ -19,6 +20,6 @@ if test $# = 0; then
   exit 0
 fi
 
-LIBS="${GARLIC}/libgarlic.a ${GARLIC}/libgnat.a"
+LIBS="${GARLIC}/libgarlic.a ${GARLIC}/libgnat.a ${EXTRA_LIBS}"
 
 eval dist1 -I${GARLIC} -L${GARLIC} "$@" -largs ${LIBS}
